--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,1 +1,8 @@
 /** @format */
+
+@font-face {
+    font-family: 'Monogram';
+    src: url('./fonts/monogram.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
