--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,1 +1,74 @@
 /** @format */
+
+/* General Container*/
+.container {
+    width: 100dvw;
+    height: 100dvh;
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+}
+
+/* Ui Styles */
+
+.ui-heading {
+    font-size: clamp(4.2rem, 10vh, 5.6rem);
+    color: white;
+    text-align: center;
+}
+
+.ui-button {
+    color: white;
+    font-size: clamp(2.2rem, 6vh, 3.2rem);
+    padding-inline: 1.5rem;
+    padding-bottom: 0.3rem;
+
+    border: 2px double transparent;
+    transition: filter 0.4s ease-in-out;
+    cursor: pointer;
+    filter: brightness(0.7);
+}
+
+.ui-button:hover,
+.ui-button:focus-within,
+.ui-button:focus-visible {
+    filter: brightness(1);
+    border-left-color: white;
+    border-right-color: white;
+}
+
+/* Overlays */
+
+.overlay-button-container {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+    margin: 0.75rem;
+    filter: brightness(0.7);
+}
+
+.overlay-button-container > span {
+    font-size: 2.2rem;
+    translate: 0 -1px;
+    letter-spacing: 2.5px;
+}
+
+/* Main Menu */
+
+.main-menu {
+    justify-content: center;
+    align-items: center;
+
+    gap: 10vh;
+}
+
+.main-menu-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
