--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -24,18 +24,23 @@
     padding-inline: 1.5rem;
     padding-bottom: 0.3rem;
 
-    border: 2px double transparent;
+    border: 4px double transparent;
     transition: filter 0.4s ease-in-out;
     cursor: pointer;
     filter: brightness(0.7);
 }
 
-.ui-button:hover,
-.ui-button:focus-within,
-.ui-button:focus-visible {
+.ui-button:not(:disabled):hover,
+.ui-button:not(:disabled):focus-within,
+.ui-button:not(:disabled):focus-visible {
     filter: brightness(1);
     border-left-color: white;
     border-right-color: white;
+}
+
+.ui-button:disabled {
+    filter: brightness(0.5);
+    cursor: auto;
 }
 
 /* Animations */
@@ -76,6 +81,7 @@
 }
 
 .overlay-fade-in {
+    opacity: 1;
     position: fixed;
     inset: 0;
     background-color: black;
@@ -94,4 +100,5 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    cursor: pointer;
 }
