--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -112,6 +112,13 @@
     right: 0;
     bottom: 0;
     margin: 1rem;
+    transform-origin: bottom right;
+    opacity: 0.6;
+}
+
+.mobile-controller img {
+    width: 48px;
+    height: 48px;
 }
 
 .mobile-controller > .up {
