--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -113,7 +113,7 @@
     bottom: 0;
     margin: 1rem;
     transform-origin: bottom right;
-    opacity: 0.6;
+    filter: brightness(0.7);
 }
 
 .mobile-controller img {
