--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -169,3 +169,23 @@
     opacity: 0;
     transition: opacity 1s ease-out;
 }
+
+.reset-to-center {
+    font-size: 2rem;
+    gap: 1.25rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    width: 40vw;
+    align-self: center;
+    border: 1px solid white;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    pointer-events: all;
+    transition: opacity 0.5s ease-in-out;
+    filter: brightness(0.7);
+}
+
+.reset-to-center.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
