chore: change to relative file paths

--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'Monogram';
-    src: url('/fonts/monogram.ttf') format('truetype');
+    src: url('../fonts/monogram.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
